# paralela_clion

./: .gitignore  ejemplo01_DanielLlumiquinga.rar  ejemplo02_fractal2.rar  fractaldll.rar  mpi.rar
Grupal_PPC_G1/: CMakeLists.txt  fps_counter.cpp  fps_counter.h  main.cpp
conan-2.9.1-windows-x86_64/_internal/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _uuid.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
cuda/: CMakeLists.txt  fps_counter.cpp  fps_counter.h  kenel_reduccion_vector_profe.cu  kernel.cl  kernel.cu  kernel_w.cu  main.cpp  main_cl.cpp  main_cl_suma_vectores.cpp  main_reduccion_vector.cu  main_reduccion_vector_profe.cpp  main_reduccion_vectores.cpp  main_respaldo.cpp  main_w.cpp  main_w_respaldo.cpp
ejemplo01/: CMakeLists.txt  main.cpp
ejemplo02_fractal2/: CMakeLists.txt  fps_counter.cpp  fps_counter.h  main.cpp  main_fractal.cpp  main_promedio_mp.cpp  main_suma_mp.cpp
fractaldll/: CMakeLists.txt  library.cpp  library.h
mpi/: CMakeLists.txt  main.cpp
mpi_rep/: CMakeLists.txt  conandata.yml  main.cpp  main_promedio.cpp  main_suma.cpp  matrices_multi.cpp  mpi.cpp  mpi_correccion.cpp  mpi_fractal.cpp  mpi_fractal_full.cpp  mpi_fractal_other.cpp  mpi_fractal_willan.cpp  mpi_matrices_multi.cpp  mpi_promedio.cpp  mpi_suma.cpp  omp_fps_counter.cpp  omp_fps_counter.h  omp_fractal.cpp  omp_paleta.cpp  omp_promedio.cpp  omp_reduccion_vectores.cpp  omp_suma.cpp
programacionparalelaMPI/: CMakeLists.txt  readme.txt
